update env.example and added composer

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-MAIN_SERVICE_JWT_PUBLIC_KEY = 
-EXPECTED_JWT_ISSUER = 
-EXPECTED_JWT_AUDIENCE = 
+MAIN_SERVICE_JWT_PUBLIC_KEY=
+EXPECTED_JWT_ISSUER=
+EXPECTED_JWT_AUDIENCE=
 
-S3_ACCESS_KEY = 
-S3_SECRET_KEY = 
-S3_BUCKET_NAME = 
-S3_ENDPOINT_URL = 
-S3_REGION_NAME = 
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_BUCKET_NAME=
+S3_ENDPOINT_URL=
+S3_REGION_NAME=
+
+SERVICE_PORT=
+ENV=
