Add persistent data and temp chunks volumes in Docker Compose
- Added new volume mappings for persistent_data and temp_chunks to the Docker Compose configuration.
- This change allows for better data management and storage during application runtime.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       - ${SERVICE_PORT}:8000
     volumes:
       - .:/app
+      - ./persistent_data:/app/persistent_data
+      - ./temp_chunks:/app/temp_chunks
     environment:
       - PYTHONPATH=/app
